fixed multiple select CSS overflow problem (resolves #268)

--- a/assets/editor/style.scss
+++ b/assets/editor/style.scss
@@ -122,6 +122,7 @@
   select[multiple].components-select-control__input {
     height: auto;
     padding-right: 8px;
+    overflow: auto;
 
     + .components-input-control__suffix {
       display: none;
